third_party/move/move-compiler/tests/move_check/parser/address_just_too_long_decimal_exp.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/parser/address_just_too_long_decimal_exp.move:4:13
  │
4 │         let x = @115792089237316195423570985008687907853269984665640564039457584007913129639936;
  │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_just_too_long_decimal_exp.move:4:18
  │
4 │         let x = @115792089237316195423570985008687907853269984665640564039457584007913129639936;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes

