third_party/move/move-compiler/tests/move_check/parser/address_just_too_long_decimal_exp.move
// Addresses are at most 32 bytes long.
script {
    fun main() {
        let x = @115792089237316195423570985008687907853269984665640564039457584007913129639936;
    }
}
